src/objects/Network__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Directory_Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Directory Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NetworksEntity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Physician, Faculty</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>NetworksIndividual</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <label>Network_OLD_DO_NOT_USE</label>
    <nameField>
        <displayFormat>NId{0}</displayFormat>
        <label>NId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Networks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>